src/main/java/com/example/sp/web/rest/errors/ConnectionAlreadyAddedException.java
package com.example.sp.web.rest.errors;

public class ConnectionAlreadyAddedException extends SPException {
    public ConnectionAlreadyAddedException() {
        super("Connection already added");
    }
}
